<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextModeCrypt"
        android:layout_width="276dp"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="Mode Widget : Chiffrement" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/btn_start"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/btn_settings"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_usr_guide"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/btn_usr_guide"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/btn_close"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:typeface="monospace" />

</LinearLayout>